# Diffusion-Planner

./: .clang-format-ignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START_GUIDE.md  README.md  SAGE_JEPA_PLAN.md  TEMPORAL_STABILITY_SWITCHES.md  program.md  pyproject.toml  requirements_torch.txt
diffusion_planner/: .gitignore  README.md  data_process.py  grpo_run.sh  normalization.json  pyproject.toml  pytest_run.sh  requirements.txt  requirements_nuplan-devkit_fixed.txt  retrain_run.sh  run_history_cond_train.sh  run_prior_cond_train.sh  run_prior_loss_gate_train.sh  run_prior_loss_train.sh  run_sdedit_train.sh  run_temporal_ab.sh  setup.py  train_base_match_temporal.sh  train_grpo_predictor.py  train_predictor.py  train_run.sh  train_temporal_run.sh  valid_predictor.py  valid_predictor_closed_loop.py  valid_run.sh  visualize_collision_steps.py  visualize_grpo_samples.py  visualize_model_compare.py  visualize_neighbor_db.py
diffusion_planner/diffusion_planner/: dimensions.py  finetune_temporal_consistency.py  grpo_epoch.py  grpo_utils.py  loss.py  train.py  train_config.py  train_epoch.py  valid_config.py  validate_model.py
diffusion_planner/sampling/: README.md  build_prototypes.py  cluster.py  plot_metrics.py  sampling.py  visualize_cluster.py
diffusion_planner/tests/: test_cluster.py  test_data_augmentation.py  test_epdms_like_aggregate.py  test_scene_skip.py  test_validation_subscores.py
diffusion_planner/util_scripts/: annotate_npz_with_prediction_score.py  check_inference_speed.py  check_model.py  concat_data_list_jsons.py  create_filtered_train_set_path.py  create_train_set_path.py  filter_json.py  filter_json_special.py  parse_prediction_results.py  search_scenes.py  visualize_input.py  visualize_penalties.py  visualize_prediction.py
exploration_policy/: README.md  __init__.py  loss.py  model.py  pyproject.toml  test_exploration_policy.py  test_integration.py  utils.py
exploration_policy/module/: heads.py  ref_fusion.py  ref_mixer.py
guidance_gui/: README.md  __main__.py  app.py  custom_guidance.py  generate_samples.py  guidance_ui.py  prototypes_k16.npy  pyproject.toml  visualization.py
guidance_gui/scripts/: generate_prototypes.py
planner_metrics/: __init__.py  aggregate.py  collision_geometry.py  config.py  epdms_like.py  geometry.py  pdms_navsim.py  pdms_proxy.py  pyproject.toml  replan_consistency.py  subscores.py  test_consistency_gating.py  test_epdms_synthetic.py  test_replan_grouping.py  test_temporal_stability.py
preference_optimization/: NOTES_gt_as_winner.md  README.md  annotation_gui.py  annotation_gui_gradio.py  annotation_ros_node.py  annotation_ws_server.py  datasets.py  dpo_loss.py  generate_dpo_data.py  generate_dpo_data_rule_based.py  lora_utils.py  merge_lora.py  model_utils.py  preference_collection.py  pyproject.toml  test_fde.py  test_fde_standalone.py  test_initial_pruning.py  train_dpo.py  trainer.py  utils.py  visualization.py
preference_optimization/static/: annotation_styles.css  keyboard_handler.js
rlvr/: DESIGN.md  IMPLEMENTATION_STATUS.md  README.md  __init__.py  analyze_rewards.py  auto_research.py  cleanse_lane_scenes.py  diagnose_grpo_signal.py  eval_lane_border_distance.py  eval_reward_vs_gt.py  eval_teleport_metrics.py  generation_variants.py  grpo_config.py  grpo_exploration_trainer.py  grpo_logprob_loss.py  grpo_loss.py  grpo_sampler.py  grpo_sampler_batched.py  grpo_sft_trainer.py  grpo_trainer.py  grpo_trainer_batched.py  guidance_batched.py  npz_utils.py  prototypes_k16.npy  prototypes_k16_counts.npy  pyproject.toml  rank_analytics.py  reward.py  reward_golden.json  run_experiment.py  setup.py  terasim_bridge.py  test_auto_research_smoke.py  test_exploration_trainer.py  test_generation_variants.py  test_grpo_config_validation.py  test_grpo_sampler.py  test_guidance_batched.py  test_guidance_envelope_persistence.py  test_kl_loss.py  (+20 more)
rlvr/autoresearch/: README.md  check_lora_training.py  compare_models.py  eval_border_distance.py  run_experiment.py  test_road_border.py  visualize_scenes.py
rlvr/closed_loop/: __init__.py  batched_rollout.py  closed_loop_trainer.py  gae.py  per_step_reward.py  rollout.py  state_update.py  test_gae.py  test_real_scene.py
rlvr/configs/: grpo_multi_epoch.json  grpo_multi_epoch_vdgrpo.json  grpo_onpolicy.json  grpo_onpolicy_exploration.json  grpo_onpolicy_hybrid.json  grpo_onpolicy_kl_cosine.json  grpo_onpolicy_vdgrpo.json  grpo_onpolicy_vdgrpo_kl_cosine.json  grpo_zi_300sc.json  logprob_balanced_40sc.json  logprob_curve20_norm.json  rsft_curated_sft_ego_gt.json  rsft_curated_sft_ego_gt_lowlr.json  rsft_ranked_baseline_neighbor.json  rsft_ranked_gt_neighbor.json  scene_failure_thresholds.json
rlvr/scripts/: check_lora_training.py  convert_lanelet2_to_sumo.py  launch_gui.py  replay_fcd.py  validate_ghost_replay.py
rlvr/sim_config/: background_traffic.rou.xml  ghost_replay.yaml  ghost_replay_gui.yaml  sim.sumocfg
rlvr/tests/: test_logprob_loss.py  test_vpsde_logprob.py
scenario_generation/: README.md  __init__.py  batch_generate.py  closed_loop_eval.py  explorer_runner.py  gt_route_extractor.py  mpc_tracker.py  npz_loader.py  perception_reproducer.py  perf_timer.py  pyproject.toml  render_npz_dir.py  replay.py  reproducer_rollout.py  route.py  route_timeline.py  scene_context.py  scene_render.py  simulate.py  tensor_converter.py  traffic_light.py  transforms.py  visualize.py
scenario_generation/configs/: classify_bands_default.json  example.json  replay_default.json
scenario_generation/gui/: __init__.py  __main__.py  app.py  lanelet_scene_builder.py  scene_renderer.py
scenario_generation/tests/: conftest.py  test_arc_length_cache.py  test_batch_inference.py  test_map_cache.py  test_mpc_tracker.py  test_parallel_save.py  test_perception_reproducer_cursor.py  test_perf_integration.py  test_pipeline.py  test_replay_spawn.py  test_reproducer_collision_scope.py  test_route.py  (+11 more)
scene_search/: README.md  __main__.py  app.py  batch_search.py  map_canvas_js.py  map_renderer.py  pyproject.toml  replay_index.py  scene_previewer.py
(+452 files in other folders)
