[project]
name = "diffusion-planner-workspace"
version = "4.0.0"
description = "Diffusion Planner workspace"
requires-python = ">=3.10,<3.11"
dependencies = [
    "diffusion-planner",
    "exploration-policy",
    "guidance-gui",
    "preference-optimization",
    "rlvr",
    "scenario-generation",
    "scene-search",
]

[dependency-groups]
dev = ["pre-commit==4.6.0", "pytest>=8.0.0", "ruff==0.15.16"]

[tool.uv]
exclude-newer = "7 days"
constraint-dependencies = ["idna==3.15", "aiohttp==3.14.0", "starlette==1.0.1"]

[[tool.uv.index]]
name = "flatt"
url = "https://pypi.flatt.tech/simple/"
default = true

[tool.uv.workspace]
members = [
    "diffusion_planner",
    "exploration_policy",
    "preference_optimization",
    "rlvr",
    "scenario_generation",
    "scene_search",
    "guidance_gui",
]

[tool.uv.sources]
diffusion-planner = { workspace = true }
exploration-policy = { workspace = true }
preference-optimization = { workspace = true }
rlvr = { workspace = true }
scenario-generation = { workspace = true }
scene-search = { workspace = true }
guidance-gui = { workspace = true }

[tool.pytest.ini_options]
markers = [
    "benchmark: performance profiling tests (deselect with '-m \"not benchmark\"')",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select=["I"]
extend-ignore=["ANN", "D", "FBT", "FIX", "PLR", "TD", "UP"]
ignore=[
    "B904",
    "C901",
    "COM812",
    "E501", "E721",
    "EM102",
    "F541",
    "FA102",
    "G004",
    "PERF203", "PERF401",
    "PLR2004",
    "PLW2901",
    "RET504",
    "RUF003", "RUF005",
    "S101", "S602",
    "SIM401",
    "SLF001",
    "T201",
    "TRY003",
]
