[project]
name = "diffusion_planner"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.2",
    "gradio>=6.14.0",
    "matplotlib>=3.10.9",
    "natsort>=8.4.0",
    "numpy>=2.4.4",
    "onnx>=1.21.0",
    "onnxruntime>=1.26.0",
    "onnxsim>=0.6.3",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "peft>=0.19.1",
    "protobuf>=7.34.1",
    "pydantic>=2.13.4",
    "pytorch-lightning>=2.6.1",
    "scipy>=1.17.1",
    "timm>=1.0.27",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "wandb>=0.26.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
