[project]
name = "diffusion_planner"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "einops",
    "gradio",
    "imageio",
    "imageio-ffmpeg",
    "matplotlib",
    "natsort",
    "numpy>=1.26,<2",
    "onnx",
    "onnxruntime",
    "onnxsim",
    "opencv-python",
    "pandas>=2,<3",
    "peft",
    "protobuf",
    "pydantic",
    "pytorch-lightning",
    "scipy",
    "timm",
    "torch",
    "tqdm",
    "wandb",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
