[project]
name = "exploration_policy"
version = "0.1.0"
description = "Exploration Policy for adaptive guidance during GRPO training"
requires-python = ">=3.10,<3.11"
dependencies = [
    "diffusion-planner",
    "guidance-gui",
    "numpy>=1.26,<2",
    "timm",
    "torch",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "exploration_policy",
    "exploration_policy.module",
]
package-dir = { "exploration_policy" = "." }

[tool.uv.sources]
diffusion-planner = { workspace = true }
guidance-gui = { workspace = true }
