[project]
name = "guidance_gui"
version = "0.1.0"
description = "Guidance GUI for visualization"
requires-python = ">=3.10,<3.11"
dependencies = [
    "diffusion-planner",
    "gradio",
    "matplotlib",
    "numpy>=1.26,<2",
    "pillow",
    "preference-optimization",
    "scipy",
    "torch",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["guidance_gui"]
package-dir = { "guidance_gui" = "." }

[tool.setuptools.package-data]
guidance_gui = ["*.npy"]

[tool.uv.sources]
diffusion-planner = { workspace = true }
preference-optimization = { workspace = true }
