[project]
name = "preference_optimization"
version = "0.1.0"
description = "Preference Optimization utilities for DPO training"
requires-python = ">=3.13"
dependencies = [
    "diffusion-planner",
    "gradio>=6.14.0",
    "guidance-gui",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "peft>=0.19.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "websockets>=16.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["preference_optimization"]
package-dir = { "preference_optimization" = "." }

[tool.setuptools.package-data]
preference_optimization = ["static/*.css", "static/*.js"]

[tool.uv.sources]
diffusion-planner = { workspace = true }
guidance-gui = { workspace = true }
