[project]
name = "preference_optimization"
version = "0.1.0"
description = "Preference Optimization utilities for DPO training"
requires-python = ">=3.10,<3.11"
dependencies = [
    "diffusion-planner",
    "gradio",
    "guidance-gui",
    "matplotlib",
    "numpy>=1.26,<2",
    "pandas>=2,<3",
    "peft",
    "torch",
    "tqdm",
    "websockets",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["preference_optimization"]
package-dir = { "preference_optimization" = "." }

[tool.setuptools.package-data]
preference_optimization = ["static/*.css", "static/*.js"]

[tool.uv.sources]
diffusion-planner = { workspace = true }
guidance-gui = { workspace = true }
