[project]
name = "rlvr"
version = "0.1.0"
description = "Reinforcement Learning with Verifiable Rewards"
requires-python = ">=3.13"
dependencies = [
    "diffusion-planner",
    "exploration-policy",
    "gradio>=6.14.0",
    "guidance-gui",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "preference-optimization",
    "safetensors>=0.7.0",
    "scenario-generation",
    "scipy>=1.17.1",
    "torch>=2.11.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "rlvr",
    "rlvr.autoresearch",
    "rlvr.autoresearch.tests",
    "rlvr.autoresearch.tools",
    "rlvr.closed_loop",
]
package-dir = { "rlvr" = "." }

[tool.setuptools.package-data]
rlvr = ["configs/*.json", "*.npy"]

[tool.uv.sources]
diffusion-planner = { workspace = true }
preference-optimization = { workspace = true }
exploration-policy = { workspace = true }
guidance-gui = { workspace = true }
scenario-generation = { workspace = true }
