[project]
name = "rlvr"
version = "0.1.0"
description = "Reinforcement Learning with Verifiable Rewards"
requires-python = ">=3.10,<3.11"
dependencies = [
    "diffusion-planner",
    "exploration-policy",
    "gradio",
    "guidance-gui",
    "matplotlib",
    "numpy>=1.26,<2",
    "pandas>=2,<3",
    "preference-optimization",
    "safetensors",
    "scenario-generation",
    "scipy",
    "torch",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "rlvr",
    "rlvr.autoresearch",
    "rlvr.autoresearch.tests",
    "rlvr.autoresearch.tools",
    "rlvr.closed_loop",
]
package-dir = { "rlvr" = "." }

[tool.setuptools.package-data]
rlvr = ["configs/*.json", "*.npy"]

[tool.uv.sources]
diffusion-planner = { workspace = true }
preference-optimization = { workspace = true }
exploration-policy = { workspace = true }
guidance-gui = { workspace = true }
scenario-generation = { workspace = true }
