[project]
name = "scenario_generation"
version = "0.1.0"
description = "Scenario generation utilities"
requires-python = ">=3.10,<3.11"
dependencies = [
    "diffusion-planner",
    "gradio",
    "matplotlib",
    "numpy>=1.26,<2",
    "rlvr",
    "scene-search",
    "scipy",
    "torch",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "scenario_generation",
    "scenario_generation.gui",
    "scenario_generation.tools",
]
package-dir = { "scenario_generation" = "." }

[tool.setuptools.package-data]
scenario_generation = ["configs/*.json"]

[tool.uv.sources]
diffusion-planner = { workspace = true }
rlvr = { workspace = true }
scene-search = { workspace = true }
