[project]
name = "scene_search"
version = "0.1.0"
description = "Scene search GUI for NPZ driving scenes"
requires-python = ">=3.10,<3.11"
dependencies = [
    "diffusion-planner",
    "gradio",
    "matplotlib",
    "numpy>=1.26,<2",
    "pillow",
    "torch",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "scene_search",
    "scene_search.constraints",
]
package-dir = { "scene_search" = "." }

[tool.setuptools.package-data]
scene_search = ["static/*.js"]

[tool.uv.sources]
diffusion-planner = { workspace = true }
