<?xml version="1.0"?>
<package format="3">
  <name>autoware_diffusion_planner_tools</name>
  <version>0.50.0</version>
  <description>The autoware_diffusion_planner_tools package</description>

  <maintainer email="daniel.sanchez@tier4.jp">Daniel Sanchez</maintainer>
  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
  <maintainer email="go.sakayori@tier4.jp">Go Sakayori</maintainer>
  <maintainer email="shintaro.sakoda@tier4.jp">Shintaro Sakoda</maintainer>

  <license>Apache License 2.0</license>

  <author email="shintaro.sakoda@tier4.jp">Shintaro Sakoda</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>autoware_diffusion_planner</depend>
  <depend>autoware_vehicle_info_utils</depend>
  <depend>fmt</depend>
  <depend>rosbag2_cpp</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>rosbag2_storage_mcap</exec_depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>
  <test_depend>autoware_test_utils</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
